--- a/notes/12_gmm-em/2_em.tex
+++ b/notes/12_gmm-em/2_em.tex
@@ -26,7 +26,7 @@
 
 \svspace{-5mm}
 
-\question{What is the distribution of show sizes in Berlin?}
+\question{What is the distribution of shoe sizes in Berlin?}
 
 \svspace{-5mm}
 
