--- a/notes/12_gmm-em/2_em.tex
+++ b/notes/12_gmm-em/2_em.tex
@@ -88,7 +88,7 @@ Example:\\
 
 \svspace{-7mm}
 
-\notesonly{We have also see how Gaussian Mixture Models can model assignment variables using mixture components.}
+\notesonly{We have also seen how Gaussian Mixture Models can model assignment variables using mixture components.}
 
 \begin{center}
 	\includegraphics[width=0.7\textwidth]{img/latentexample_gmm}
