--- a/notes/13_hmm/2_hmm.tex
+++ b/notes/13_hmm/2_hmm.tex
@@ -39,7 +39,7 @@ Recall in the general case of latent variable models:
 
 \begin{equation}
 P \left( \vec{x}^{(\alpha)} | \vec{w} \right) =
-\kern-4ex
+\kern-3.5ex
 \underbrace{{\color{blue}\sum_{\vec{m}}}}_{
 \substack{
 \text{\tiny all possible}\\
@@ -59,7 +59,7 @@ For HMMs\notesonly{ this would take the following shape}:
 
 \begin{equation}
 P \left( \vec{x}^{(t)} |~\text{param.} \right) =
-\kern-5ex
+\kern-4ex
 \underbrace{{\color{blue}\sum_{\vec{m}}}}_{
 \substack{
 \text{\tiny all possible}\\
@@ -108,7 +108,7 @@ P(\vec{x}^{(t)}  ~|~ \vec{x}^{(1)},  \dots,\vec{x}^{(t-1)}, \vec{m}^{(1)},  \dot
 \end{equation}
 }
 
-We exploit the markov property to factorize the joint distribution for the observed and hidden sequences.
+We exploit the Markov property to factorize the joint distribution for the observed and hidden sequences.
 
 \begin{align}
 P(\{\vec{x}^{(t)}\}  , \{\vec{m}^{(t)}\}) = 
@@ -267,7 +267,7 @@ P(\mathit{temperature}=29^{\circ}, \mathit{humidity}=20\% | \text{``}\mathit{clo
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{The parametrized HMM}
+\begin{frame}{The parameterized HMM}
 	
 A more detailed specification of the joint distribution becomes:
 	
