--- a/notes/13_hmm/tutorial.tex
+++ b/notes/13_hmm/tutorial.tex
@@ -91,14 +91,18 @@
 \input{./3_hmm-inference}
 \mode*
 
-\clearpage
+\mode<all>
+\input{./4_hmm-fwdbwd-usage}
+\mode*
 
-%\section{References}
-%\begin{frame}[allowframebreaks] \frametitle{References}
-	%\scriptsize
-	%\bibliographystyle{plainnat}
-	%\bibliography{bibliography}
-%\end{frame}
+%\clearpage
+
+\section{References}
+\begin{frame}[allowframebreaks] \frametitle{References}
+	\scriptsize
+	\bibliographystyle{plainnat}
+	\bibliography{bibliography}
+\end{frame}
 
 \end{rightcolumn}
 \end{paracol}
